# Astra

./: .env.example  .gitignore  CHANGELOG.md  HARVEST_FIX_SUMMARY.md  Plan.MD  RAG.MD  RAG2.MD  README.md  ROADMAP.md  SMART_PDF_PARSER.md  benchmark_parser.py  docker-compose.yml  pyproject.toml  test_smart_parser.py
.claude/: settings.local.json
Docs/schema-1.0.0/: EASA-eRules-XML-Export-Schema-1.0.0.xsd
Docs/schema-desc-1.0.0/EASA-XML-Schema-Extended-2022-06-22-HTML-documentation/: XSD-2022-06-22-doc.html  comp.html
Docs/xslt-examples/: Readme.txt
backend/: config.py
backend/api/: main.py  schemas.py
backend/database/: check_catalog.py  check_patterns.py  check_schema.py  check_titles.py  connection.py  models.py  reset_all.py  seed_catalog.py  watch_harvest.py
backend/harvest/: astra_json_parser.py  backfill_history.py  catalog.py  check_pdf_types.py  easa_fetcher.py  easa_html_converter.py  easa_html_parser.py  easa_parser.py  ingest.py  llm_enrich.py  models.py  pdf_catalog.py  pdf_cs_parser.py  pdf_narrative_parser.py  pdf_smart_parser.py  pdf_to_json.py  tmp_acns_fixpaths.py  tmp_acns_levels.py  tmp_diag.py  validate_pdf_vs_xml.py
backend/rag/: embedder.py  ingest_embeddings.py  responder.py  store.py
backend/tests/: test_api_nodes.py  test_cs_parser.py  test_easa_html_converter.py  test_schema.py
frontend/: index.html  mockup-history.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css  tree.ts  types.ts
scripts/: cleanup_cs_duplicates.py  reset_cs_sources.py
tests/: test_rag_quality.py
(+42 files in other folders)
